--- a/gw2readr-core/pom.xml
+++ b/gw2readr-core/pom.xml
@@ -65,12 +65,6 @@
 			<artifactId>log4j</artifactId>
 		</dependency>
 
-		<!-- JUNIT DEPENDENCY FOR TESTING -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
 
 		<!-- JACKSON DEPENDENCY -->
 		<dependency>
@@ -92,8 +86,13 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<build>
 		<resources>
 			<resource>
@@ -134,8 +133,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
