--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <artifactId>junit-vintage-engine</artifactId>
             <version>5.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
