--- a/gw2readr-jpa/pom.xml
+++ b/gw2readr-jpa/pom.xml
@@ -49,13 +49,10 @@
         	<version>0.8b-SNAPSHOT</version>
 		</dependency>
 		<!-- LOGGING DEPENDENCIES - LOG4J -->
+
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
 		</dependency>
 
 		<!-- JUNIT DEPENDENCY FOR TESTING -->
