--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 				<artifactId>slf4j-jdk14</artifactId>
 				<version>1.7.25</version>
 			</dependency>
+<!--			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>1.7.30</version>
+				<scope>test</scope>
+			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
